--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -19,6 +19,7 @@ jobs:
       - name: "run"
         run: |
           python -m pip install --upgrade pip
+          pip install -r ./requirements.txt
           python main.py "${{ github.event.client_payload.url }}" "${{ github.event.client_payload.description }}"
       - name: "Commit files"
         run: |
