--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -43,7 +43,7 @@ jobs:
           go-version: 1.18
       - name: "run"
         env:
-          DB_HOST: ${{ secrets.DB_HOST } }}
+          DB_HOST: ${{ secrets.DB_HOST }}
           DB_PORT: 3306
           DB_USERNAME: ${{ secrets.DB_USERNAME }}
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
