--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -50,4 +50,4 @@ jobs:
           DB_NAME: ${{ secrets.DB_NAME }}
         run: |
           go mod tidy
-          go run cmd/main.go --url="${{ github.event.client_payload.url }}" --name="${{ github.event.client_payload.description }}"
+          go run cmd/main.go --url="${{ github.event.client_payload.url }}" --name="${{ github.event.client_payload.description }}" --language="${{ github.event.client_payload.language }}"
