--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -51,3 +51,23 @@ jobs:
         run: |
           go mod tidy
           go run cmd/main.go --url="${{ github.event.client_payload.url }}" --name="${{ github.event.client_payload.description }}" --language="${{ github.event.client_payload.language }}"
+
+
+  weekly:
+    needs: save
+    if: success()
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v2
+        with:
+          go-version:v1.18
+      - name: "generate weekly"
+        env:
+          APP_ENV: "prod"
+          GITHUB_OWNER: "xiaoxuan6"
+          GITHUB_EMAIL: "1527736751@qq.com"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          go mod tidy
+          go run cmd/generate_weekly.go --uri="${{ github.event.client_payload.url }}"
