--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -61,13 +61,13 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v2
         with:
-          go-version:v1.18
+          go-version: 1.19
       - name: "generate weekly"
         env:
           APP_ENV: "prod"
           GITHUB_OWNER: "xiaoxuan6"
           GITHUB_EMAIL: "1527736751@qq.com"
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           go mod tidy
           go run cmd/generate_weekly.go --uri="${{ github.event.client_payload.url }}"
