--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -14,6 +14,9 @@ on:
         options:
           - false
           - true
+      description: '描述'
+        required: false
+        default: ''
 
 env:
   TZ: Asia/Shanghai
