fix: Update description

--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -14,10 +14,9 @@ on:
         options:
           - false
           - true
-      description:
+      description_var:
         description: '描述'
         required: false
-        default: ''
 
 env:
   TZ: Asia/Shanghai
