--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -27,6 +27,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-deptch: 0
       - uses: actions/setup-go@v2
         with:
           go-version: 1.19
