--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -50,7 +50,7 @@ jobs:
           DB_NAME: ${{ secrets.DB_NAME }}
         run: |
           go mod tidy
-          go run cmd/main.go --url="${{ github.event.client_payload.url }}" --name="${{ github.event.client_payload.description }}" --language="${{ github.event.client_payload.language }}"
+          go run cmd/main.go --url="${{ github.event.client_payload.url }}" --desc="${{ github.event.client_payload.description }}" --language="${{ github.event.client_payload.language }}"
 
 
   weekly:
